Began updating the Swedish translation.

--- a/man/sv/822-date.1.sv.po
+++ b/man/sv/822-date.1.sv.po
@@ -1,29 +1,29 @@
-# SOME DESCRIPTIVE TITLE
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Manual page for 822-date(1)
+# By Peter Karlsson <peterk@debian.org>, 1999-2006.
+# Copyright 1999-2006 Software in the Public Interest
 # 
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-02-28  1:40+0200\n"
-"PO-Revision-Date: 2005-07-03 15:04+0200\n"
-"Last-Translator: Unknown translator\n"
+"PO-Revision-Date: 2006-05-14 16:18+0100\n"
+"Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 # type: Plain text
 #: 822-date.1:3
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "822-date"
-msgstr "B<822-date>"
+msgstr "822-date"
 
 # type: TH
 #: 822-date.1:3
 #, no-wrap
 msgid "2008-02-28"
-msgstr ""
+msgstr "2008-02-28"
 
 # type: TH
 #: 822-date.1:3
@@ -72,7 +72,7 @@ msgid ""
 "RFC822, using a numeric timezone offset as recommended in RFC1123."
 msgstr ""
 "B<822-date> visar aktuellt datum och tid i det format som beskrivs av "
-"RFC822, med en numerisk tidszonsfÃ¶rskjutning enligt rekommendationen i "
+"RFC822, med en numerisk tidszonsförskjutning enligt rekommendationen i "
 "RFC1123."
 
 # type: SH
@@ -94,15 +94,14 @@ msgstr "PROGRAMFEL"
 
 # type: Plain text
 #: 822-date.1:22
-#, fuzzy
 msgid "This facility really ought to be part of B<date>(1)."
-msgstr "Denna funktion borde finnas i B<date>(1)."
+msgstr "Denna funktion borde ingå i B<date>(1)."
 
 # type: SH
 #: 822-date.1:23
 #, no-wrap
 msgid "SEE ALSO"
-msgstr "SE Ã„VEN"
+msgstr "SE ÄVEN"
 
 # type: Plain text
 #: 822-date.1:26
@@ -127,22 +126,13 @@ msgstr "B<date>(1)."
 #: 822-date.1:32
 #, no-wrap
 msgid "AUTHOR"
-msgstr "FÃ–RFATTARE"
+msgstr "FÖRFATTARE"
 
 # type: Plain text
 #: 822-date.1:35
-#, fuzzy
 msgid ""
 "B<822-date> and this manpage were written by Ian Jackson. They are hereby "
 "placed by him into the public domain."
 msgstr ""
-"B<822-date> och denna manualsida skrevs av Ian Jackson.  De Ã¤r hÃ¤rmed av "
-"honom slÃ¤ppta som allmÃ¤ngods (public domain)."
-
-# type: TH
-#~ msgid "822-DATE"
-#~ msgstr "822-DATE"
-
-# type: TH
-#~ msgid "14th August 1996"
-#~ msgstr "14 augusti 1996"
+"B<822-date> och denna manualsida skrevs av Ian Jackson. De är härmed av "
+"honom släppta som allmängods (public domain)."
