--- a/man/sv/deb-old.5.sv.po
+++ b/man/sv/deb-old.5.sv.po
@@ -1,16 +1,16 @@
-# SOME DESCRIPTIVE TITLE
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Manual page for deb-old(5)
+# By Peter Karlsson <peterk@debian.org>, 1999-2006.
+# Copyright 1999-2006 Software in the Public Interest
 # 
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-02-28  1:40+0200\n"
-"PO-Revision-Date: 2005-07-03 15:04+0200\n"
-"Last-Translator: Unknown translator\n"
+"PO-Revision-Date: 2006-05-14 16:18+0100\n"
+"Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 # type: TH
@@ -46,7 +46,7 @@ msgstr "NAMN"
 # type: Plain text
 #: deb-old.5:4
 msgid "deb-old - old style Debian binary package format"
-msgstr "deb-old - Debians gamla binÃ¤rpaketformat"
+msgstr "deb-old - Debians gamla binärpaketformat"
 
 # type: SH
 #: deb-old.5:5
@@ -73,8 +73,8 @@ msgid ""
 "page describes the B<old> format, used before Debian 0.93. Please see B<deb>"
 "(5)  for details of the new format."
 msgstr ""
-"B<.deb>-formatet Ã¤r Debians binÃ¤ra paketformat.  Denna manualsida beskriver "
-"det B<gamla> formatet som anvÃ¤nds fÃ¶re Debian 0.93.  Se B<deb>(5)  fÃ¶r "
+"B<.deb>-formatet är Debians binära paketformat.  Denna manualsida beskriver "
+"det B<gamla> formatet som används före Debian 0.93.  Se B<deb>(5)  för "
 "detaljerad information om det nya formatet."
 
 # type: SH
@@ -89,7 +89,7 @@ msgid ""
 "The file is two lines of format information as ASCII text, followed by two "
 "concatenated gzipped ustar files."
 msgstr ""
-"Filen innehÃ¥ller tvÃ¥ rader av formatinformation som ASCII-text, fÃ¶ljt av tvÃ¥ "
+"Filen innehåller två rader av formatinformation som ASCII-text, följt av två "
 "sammaslagna gzip-packade ustar-filer."
 
 # type: Plain text
@@ -98,8 +98,8 @@ msgid ""
 "The first line is the format version number padded to 8 digits, and is "
 "B<0.939000> for all old-format archives."
 msgstr ""
-"Den fÃ¶rsta raden i filen Ã¤r formatversionsnumret utfyllt till Ã¥tta siffror, "
-"och Ã¤r B<0.939000> fÃ¶r alla arkiv i det gamla formatet."
+"Den första raden i filen är formatversionsnumret utfyllt till åtta siffror, "
+"och är B<0.939000> för alla arkiv i det gamla formatet."
 
 # type: Plain text
 #: deb-old.5:28
@@ -108,13 +108,13 @@ msgid ""
 "The second line is a decimal string (without leading zeroes) giving the "
 "length of the first gzipped tarfile."
 msgstr ""
-"NÃ¤sta rad Ã¤r en decimalstrÃ¤ng (utan inledande nollor) som anger lÃ¤ngden pÃ¥ "
-"den fÃ¶rsta gzip-packade tar-filen."
+"Nästa rad är en decimalsträng (utan inledande nollor) som anger längden på "
+"den första gzip-packade tar-filen."
 
 # type: Plain text
 #: deb-old.5:30
 msgid "Each of these lines is terminated with a single newline character."
-msgstr "BÃ¥da dessa rader avslutas med ett ensamt radbrytningstecken."
+msgstr "Båda dessa rader avslutas med ett ensamt radbrytningstecken."
 
 # type: Plain text
 #: deb-old.5:35
@@ -124,9 +124,9 @@ msgid ""
 "files. The file B<control> must be present, as it contains the core control "
 "information."
 msgstr ""
-"Den fÃ¶rsta tar-filen innehÃ¥ller kontrollinformationen, lagrade som ett antal "
+"Den första tar-filen innehåller kontrollinformationen, lagrade som ett antal "
 "vanliga filer, beskrivna i I<Debian Packaging Manual, sektion 2.2>.  Filen "
-"B<control> mÃ¥ste finnas, eftersom den innehÃ¥ller grundlÃ¤ggande "
+"B<control> måste finnas, eftersom den innehåller grundläggande "
 "kontrollinformation."
 
 # type: Plain text
@@ -139,11 +139,11 @@ msgid ""
 "files in that directory. Optionally the control tarfile may contain an entry "
 "for `B<.>', that is, the current directory."
 msgstr ""
-"I vissa vÃ¤ldigt gamla arkiv kan filerna i kontroll-tarfilen eventuellt ligga "
-"i en underkatalog vid namn B<DEBIAN>.  Om sÃ¥ Ã¤r fallet kommer underkatalogen "
-"B<DEBIAN> Ã¤ven att finnas i kontroll-tarfilen, och kontroll-tarfilen kommer "
-"bara innehÃ¥lla filer i den katalogen.  Eventuellt kan kontroll-tarfilen "
-"innehÃ¥lla en post fÃ¶r . B<,> det vill sÃ¤ga aktuell katalog."
+"I vissa väldigt gamla arkiv kan filerna i kontroll-tarfilen eventuellt ligga "
+"i en underkatalog vid namn B<DEBIAN>.  Om så är fallet kommer underkatalogen "
+"B<DEBIAN> även att finnas i kontroll-tarfilen, och kontroll-tarfilen kommer "
+"bara innehålla filer i den katalogen.  Eventuellt kan kontroll-tarfilen "
+"innehålla en post för . B<,> det vill säga aktuell katalog."
 
 # type: Plain text
 #: deb-old.5:50
@@ -153,15 +153,15 @@ msgid ""
 "relative to the root directory of the system to be installed on. The "
 "pathnames do not have leading slashes."
 msgstr ""
-"Den andra gzip-packade tar-filen Ã¤r filsystemsarkivet, vilken innehÃ¥ller "
-"sÃ¶kvÃ¤gar relativt rotkatalogen fÃ¶r systemet det skall installeras pÃ¥.  "
-"SÃ¶kvÃ¤garna innehÃ¥ller inte inledande snedstreck."
+"Den andra gzip-packade tar-filen är filsystemsarkivet, vilken innehåller "
+"sökvägar relativt rotkatalogen för systemet det skall installeras på.  "
+"Sökvägarna innehåller inte inledande snedstreck."
 
 # type: SH
 #: deb-old.5:51
 #, no-wrap
 msgid "SEE ALSO"
-msgstr "SE Ã„VEN"
+msgstr "SE ÄVEN"
 
 # type: Plain text
 #: deb-old.5:54
