--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,12 @@
+2006-05-14  Peter Karlsson  <peterk@debian.org>
+
+	* sv/822-date.1.sv.po, sv/deb.5.sv.po, sv/deb-control.5.sv.po,
+	  sv/deb-old.5.sv.po, sv/dpkg.1.sv.po, sv/dpkg.cfg.5.sv.po,
+	  sv/dpkg-deb.1.sv.po, sv/dpkg-query.1.sv.po, sv/dpkg-split.1.sv.po,
+	  sv/dselect.1.sv.po, sv/dselect.cfg.5.sv.po,
+	  sv/start-stop-daemon.8.sv.po: Began updating the Swedish
+	  translation.
+
 2006-05-14  Philippe Batailler <philippe.batailler@free.fr>
 
 	* fr/dpkg-name.1.fr.po: Updated translation.
