--- a/man/sv/dpkg-deb.1.sv.po
+++ b/man/sv/dpkg-deb.1.sv.po
@@ -1,16 +1,16 @@
-# SOME DESCRIPTIVE TITLE
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Manual page for dpkg-deb(1)
+# By Peter Karlsson <peterk@debian.org>, 1999-2006.
+# Copyright 1999-2006 Software in the Public Interest
 # 
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-05-11 23:08-0500\n"
-"PO-Revision-Date: 2005-07-03 15:04+0200\n"
-"Last-Translator: Unknown translator\n"
+"PO-Revision-Date: 2006-05-14 16:18+0100\n"
+"Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 # type: TH
@@ -46,7 +46,7 @@ msgstr "NAMN"
 # type: Plain text
 #: dpkg-deb.1:4
 msgid "dpkg-deb - Debian package archive (.deb) manipulation tool"
-msgstr "dpkg-deb - Debians manipuleringsverktyg fÃ¶r paketarkiv (.deb)"
+msgstr "dpkg-deb - Debians manipuleringsverktyg för paketarkiv (.deb)"
 
 # type: SH
 #: dpkg-deb.1:4
@@ -67,7 +67,7 @@ msgstr "B<dpkg-deb> B<-I>|B<--info> I<arkiv> [I<control-filnamn> ..]"
 # type: Plain text
 #: dpkg-deb.1:16
 msgid "B<dpkg-deb> B<-f>|B<--field> I<archive> [I<control-field-name> ...]"
-msgstr "B<dpkg-deb> B<-f>|B<--field> I<arkiv> [I<control-fÃ¤ltnamn> ...]"
+msgstr "B<dpkg-deb> B<-f>|B<--field> I<arkiv> [I<control-fältnamn> ...]"
 
 # type: Plain text
 #: dpkg-deb.1:20
@@ -107,13 +107,13 @@ msgstr "BESKRIVNING"
 msgid ""
 "B<dpkg-deb> packs, unpacks and provides information about Debian archives."
 msgstr ""
-"B<dpkg-deb> packar, packar upp och tillhandahÃ¥ller information om "
+"B<dpkg-deb> packar, packar upp och tillhandahåller information om "
 "Debianarkiv."
 
 # type: Plain text
 #: dpkg-deb.1:43
 msgid "Use B<dpkg> to install and remove packages from your system."
-msgstr "AnvÃ¤nd B<dpkg> fÃ¶r att installera och ta bort paket frÃ¥n ditt system."
+msgstr "Använd B<dpkg> för att installera och ta bort paket från ditt system."
 
 # type: Plain text
 #: dpkg-deb.1:53
@@ -123,15 +123,15 @@ msgid ""
 "want to pass to B<dpkg-deb>. B<dpkg> will spot that you wanted B<dpkg-deb> "
 "and run it for you."
 msgstr ""
-"Du kan Ã¤ven starta B<dpkg-deb> genom att anropa B<dpkg> med de parametrar du "
-"vill sÃ¤nda till B<dpkg-deb>. B<dpkg> kommer upptÃ¤cka att du ville nÃ¥ B<dpkg-"
-"deb> och kÃ¶r det Ã¥t dig."
+"Du kan även starta B<dpkg-deb> genom att anropa B<dpkg> med de parametrar du "
+"vill sända till B<dpkg-deb>. B<dpkg> kommer upptäcka att du ville nå B<dpkg-"
+"deb> och kör det åt dig."
 
 # type: SH
 #: dpkg-deb.1:53
 #, no-wrap
 msgid "ACTION OPTIONS"
-msgstr "Ã…TGÃ„RDSFLAGGOR"
+msgstr "ÅTGÄRDSFLAGGOR"
 
 # type: TP
 #: dpkg-deb.1:54
@@ -149,11 +149,11 @@ msgid ""
 "I<not> appear in the binary package's filesystem archive, but instead the "
 "files in it will be put in the binary package's control information area."
 msgstr ""
-"Skapar ett Debianarkiv frÃ¥n filsystemstrÃ¤det som lagras i I<katalog>. "
-"I<katalog> mÃ¥ste innehÃ¥lla underkatalogen B<DEBIAN>, vilken innehÃ¥ller "
-"styrinformationsfiler sÃ¥som sjÃ¤lv styrfilen control.  Denna katalog kommer "
-"I<inte> att visas i binÃ¤rpaketets filsystemsarkiv, utan istÃ¤llet kommer "
-"filerna lÃ¤ggas i binÃ¤rpaketets styrinformationsomrÃ¥de."
+"Skapar ett Debianarkiv från filsystemsträdet som lagras i I<katalog>. "
+"I<katalog> måste innehålla underkatalogen B<DEBIAN>, vilken innehåller "
+"styrinformationsfiler såsom själv styrfilen control.  Denna katalog kommer "
+"I<inte> att visas i binärpaketets filsystemsarkiv, utan istället kommer "
+"filerna läggas i binärpaketets styrinformationsområde."
 
 # type: Plain text
 #: dpkg-deb.1:72
@@ -161,8 +161,8 @@ msgid ""
 "You can specify the compression level used by adding a B<-z#> option.  "
 "B<dpkg-deb> will pass that option on to gzip."
 msgstr ""
-"Du kan ange komprimeringsnivÃ¥n genom att lÃ¤gga till flaggan B<-z#>.  B<dpkg-"
-"deb> kommer sÃ¤nda vidare den flaggan till gzip."
+"Du kan ange komprimeringsnivån genom att lägga till flaggan B<-z#>.  B<dpkg-"
+"deb> kommer sända vidare den flaggan till gzip."
 
 # type: Plain text
 #: dpkg-deb.1:84
@@ -174,10 +174,10 @@ msgid ""
 "permissions of the maintainer scripts and other files found in the B<DEBIAN> "
 "control information directory."
 msgstr ""
-"SÃ¥vida du inte anger B<--nocheck> kommer dpkg-deb att lÃ¤sa B<DEBIAN/control> "
+"Såvida du inte anger B<--nocheck> kommer dpkg-deb att läsa B<DEBIAN/control> "
 "och tolka den.  Den kommer leta efter syntaxfel och andra problem, och visa "
-"namnet pÃ¥ det binÃ¤rpaket som byggs.  B<dpkg-deb> kommer Ã¤ven att kontrollera "
-"behÃ¶righeten pÃ¥ paketskripten och andra filer som hittas i "
+"namnet på det binärpaket som byggs.  B<dpkg-deb> kommer även att kontrollera "
+"behörigheten på paketskripten och andra filer som hittas i "
 "styrinformationskatalogen B<DEBIAN>."
 
 # type: Plain text
@@ -192,7 +192,7 @@ msgstr ""
 # type: Plain text
 #: dpkg-deb.1:93
 msgid "If the archive to be created already exists it will be overwritten."
-msgstr "Om arkivet som skall skapas redan finns kommer det skrivas Ã¶ver."
+msgstr "Om arkivet som skall skapas redan finns kommer det skrivas över."
 
 # type: Plain text
 #: dpkg-deb.1:109
@@ -205,13 +205,13 @@ msgid ""
 "a file, the B<--nocheck> option may not be used (since B<dpkg-deb> needs to "
 "read and parse the package control file to determine which filename to use)."
 msgstr ""
-"Om det andra argumentet Ã¤r en katalog kommer B<dpkg-deb> skriva till filen "
+"Om det andra argumentet är en katalog kommer B<dpkg-deb> skriva till filen "
 "I<paket>B<_>I<version>B<_>I<arkitektur>B<.deb>, eller "
-"I<paket>B<_>I<version>B<.deb> om inget B<Architecture>-fÃ¤lt finns i "
-"styrfilen control.  NÃ¤r en mÃ¥lkatalog anges, istÃ¤llet fÃ¶r en fil, kan inte "
-"flaggan B<--nocheck> anvÃ¤ndas (eftersom B<dpkg-deb> mÃ¥ste lÃ¤sa och tolka "
-"paketets styrfil control fÃ¶r att ta reda pÃ¥ vilket filnamn som skall "
-"anvÃ¤ndas)."
+"I<paket>B<_>I<version>B<.deb> om inget B<Architecture>-fält finns i "
+"styrfilen control.  När en målkatalog anges, istället för en fil, kan inte "
+"flaggan B<--nocheck> användas (eftersom B<dpkg-deb> måste läsa och tolka "
+"paketets styrfil control för att ta reda på vilket filnamn som skall "
+"användas)."
 
 # type: TP
 #: dpkg-deb.1:109
@@ -222,7 +222,7 @@ msgstr "B<--info>, B<-I>"
 # type: Plain text
 #: dpkg-deb.1:112
 msgid "Provides information about a binary package archive."
-msgstr "TillhandahÃ¥ller information om ett binÃ¤rt parketarkiv."
+msgstr "Tillhandahåller information om ett binärt parketarkiv."
 
 # type: Plain text
 #: dpkg-deb.1:117
@@ -231,7 +231,7 @@ msgid ""
 "the contents of the package as well as its control file."
 msgstr ""
 "Om inga control-filnamn anges kommer det att visa en sammanfattning av "
-"innehÃ¥llet i paketet tillsammans med dess styrfil."
+"innehållet i paketet tillsammans med dess styrfil."
 
 # type: Plain text
 #: dpkg-deb.1:125
@@ -243,8 +243,8 @@ msgid ""
 "2."
 msgstr ""
 "Om ett eller flera control-filnamn anges kommer B<dpkg-deb> att skriva ut "
-"dem i den ordning de anges.  Om nÃ¥gra av komponenterna inte fanns kommer ett "
-"felmeddelande skrivas ut pÃ¥ stderr om var och ett, och programmet avslutas "
+"dem i den ordning de anges.  Om några av komponenterna inte fanns kommer ett "
+"felmeddelande skrivas ut på stderr om var och ett, och programmet avslutas "
 "med felstatus 2."
 
 # type: TP
@@ -260,7 +260,7 @@ msgid ""
 "Provides information about a binary package archive in the format specified "
 "by the B<--showformat> argument. The default format displays the package's "
 "name and version on one line, seperated by a tabulator."
-msgstr "TillhandahÃ¥ller information om ett binÃ¤rt parketarkiv."
+msgstr "Tillhandahåller information om ett binärt parketarkiv."
 
 # type: TP
 #: dpkg-deb.1:132
@@ -271,7 +271,7 @@ msgstr "B<--field>, B<-f>"
 # type: Plain text
 #: dpkg-deb.1:135
 msgid "Extracts control file information from a binary package archive."
-msgstr "Extraherar styrfilsinformation frÃ¥n ett binÃ¤rt paketarkiv."
+msgstr "Extraherar styrfilsinformation från ett binärt paketarkiv."
 
 # type: Plain text
 #: dpkg-deb.1:139
@@ -279,7 +279,7 @@ msgstr "Extraherar styrfilsinformation frÃ¥n ett binÃ¤rt paketarkiv."
 msgid ""
 "If no B<control-file-field>s are specified then it will print the whole "
 "control file."
-msgstr "Om inga B<styrfilsfÃ¤lt> anges kommer den skriva ut hela styrfilen."
+msgstr "Om inga B<styrfilsfält> anges kommer den skriva ut hela styrfilen."
 
 # type: Plain text
 #: dpkg-deb.1:148
@@ -290,15 +290,15 @@ msgid ""
 "file-field> is specified then B<dpkg-deb> will precede each with its field "
 "name (and a colon and space)."
 msgstr ""
-"Om nÃ¥gra anges kommer B<dpkg-deb> att visa deras innehÃ¥ll, i den ordning de "
-"fÃ¶rekommer i styrfilen.  Om mer Ã¤n ett B<styrfilsfÃ¤lt> anges kommer B<dpkg-"
-"deb> visa varje med ett inledande fÃ¤ltnamn (och ett kolon och mellanrum)."
+"Om några anges kommer B<dpkg-deb> att visa deras innehåll, i den ordning de "
+"förekommer i styrfilen.  Om mer än ett B<styrfilsfält> anges kommer B<dpkg-"
+"deb> visa varje med ett inledande fältnamn (och ett kolon och mellanrum)."
 
 # type: Plain text
 #: dpkg-deb.1:150
 msgid "No errors are reported for fields requested but not found."
 msgstr ""
-"Inga felmeddelande rapporteras fÃ¶r fÃ¤lt som efterfrÃ¥gas men inte hittas."
+"Inga felmeddelande rapporteras för fält som efterfrågas men inte hittas."
 
 # type: TP
 #: dpkg-deb.1:150
@@ -314,8 +314,8 @@ msgid ""
 "archive. It is currently produced in the format generated by B<tar>'s "
 "verbose listing."
 msgstr ""
-"Visar innehÃ¥ller i filsystemstrÃ¤dsarkivsdelen av paketarkivet.  Det visas "
-"fÃ¶r nÃ¤rvarande i det format som genereras av B<tar>s pratsamma visning."
+"Visar innehåller i filsystemsträdsarkivsdelen av paketarkivet.  Det visas "
+"för närvarande i det format som genereras av B<tar>s pratsamma visning."
 
 # type: TP
 #: dpkg-deb.1:156
@@ -330,7 +330,7 @@ msgid ""
 "Extracts the filesystem tree from a package archive into the specified "
 "directory."
 msgstr ""
-"Extraherar filsystemstrÃ¤det frÃ¥n ett paketarkiv till den angivna katalogen."
+"Extraherar filsystemsträdet från ett paketarkiv till den angivna katalogen."
 
 # type: Plain text
 #: dpkg-deb.1:165
@@ -339,8 +339,8 @@ msgid ""
 "B<--vextract> (B<-X>)  prints a listing of the files extracted as it goes, "
 "while B<--extract> (B<-x>)  is silent unless an error occurs."
 msgstr ""
-"B<--vextract> (B<-X>)  visar en lista Ã¶ver filer som extraheras under tiden, "
-"medan B<--extract> (B<-x>)  Ã¤r tyst sÃ¥vida inte ett fel uppstÃ¥r."
+"B<--vextract> (B<-X>)  visar en lista över filer som extraheras under tiden, "
+"medan B<--extract> (B<-x>)  är tyst såvida inte ett fel uppstår."
 
 # type: Plain text
 #: dpkg-deb.1:171
@@ -350,13 +350,13 @@ msgid ""
 "correct installation! Use B<dpkg> to install packages."
 msgstr ""
 "Observera att en extrahering av ett paket till rotkatalogen I<inte> "
-"resulterar i en korrekt installation! AnvÃ¤nd B<dpkg> fÃ¶r att installera "
+"resulterar i en korrekt installation! Använd B<dpkg> för att installera "
 "paket."
 
 # type: Plain text
 #: dpkg-deb.1:174
 msgid "I<directory> (but not its parents) will be created if necessary."
-msgstr "I<katalog> (men inte dess fÃ¶rÃ¤ldrar) kommer skapas om nÃ¶dvÃ¤ndigt."
+msgstr "I<katalog> (men inte dess föräldrar) kommer skapas om nödvändigt."
 
 # type: TP
 #: dpkg-deb.1:174
@@ -372,9 +372,9 @@ msgid ""
 "standard output in B<tar> format. Together with B<tar>(1)  this can be used "
 "to extract a particular file from a package archive."
 msgstr ""
-"Extraherar filsystemstrÃ¤dsdata frÃ¥n ett binÃ¤rt paket och sÃ¤nder det till "
-"standard ut i B<tar>-format.  Tillsammans med B<tar>(1)  kan detta anvÃ¤ndas "
-"fÃ¶r att hÃ¤mta ut en enskild fil frÃ¥n ett paketarkiv."
+"Extraherar filsystemsträdsdata från ett binärt paket och sänder det till "
+"standard ut i B<tar>-format.  Tillsammans med B<tar>(1)  kan detta användas "
+"för att hämta ut en enskild fil från ett paketarkiv."
 
 # type: TP
 #: dpkg-deb.1:182
@@ -389,7 +389,7 @@ msgid ""
 "Extracts the control information files from a package archive into the "
 "specified directory."
 msgstr ""
-"Extraherar styrinformationsfilerna frÃ¥n paketarkivet till den angivna "
+"Extraherar styrinformationsfilerna från paketarkivet till den angivna "
 "katalogen."
 
 # type: Plain text
@@ -400,14 +400,14 @@ msgid ""
 "directory is used."
 msgstr ""
 "Om ingen katalog anges kommer en underkatalog vid namn B<DEBIAN> i den "
-"aktuella katalogen att anvÃ¤ndas."
+"aktuella katalogen att användas."
 
 # type: Plain text
 #: dpkg-deb.1:193
 msgid ""
 "The target directory (but not its parents) will be created if necessary."
 msgstr ""
-"MÃ¥lkatalogen (men inte dess fÃ¶rÃ¤ldrar) kommer att skapas om nÃ¶dvÃ¤ndigt."
+"Målkatalogen (men inte dess föräldrar) kommer att skapas om nödvändigt."
 
 # type: TP
 #: dpkg-deb.1:193
@@ -422,8 +422,8 @@ msgid ""
 "Prints B<dpkg-deb>'s usage message, giving a summary of its options and "
 "their uses."
 msgstr ""
-"Visar B<dpkg-deb>s anvÃ¤ndningsmeddelande, vilket sammanfattar dess flaggor "
-"och deras anvÃ¤ndning."
+"Visar B<dpkg-deb>s användningsmeddelande, vilket sammanfattar dess flaggor "
+"och deras användning."
 
 # type: TP
 #: dpkg-deb.1:198
@@ -449,8 +449,8 @@ msgid ""
 "Prints information about B<dpkg-deb>'s copyright licensing and lack of "
 "warranty. (The American spelling B<--license> is also supported)."
 msgstr ""
-"Visar information om B<dpkg-deb>s upphovsrÃ¤tt, licensinformation och "
-"avsaknad av garanti.  (Den amerikanska stavningen B<--license> stÃ¶ds ocksÃ¥.)"
+"Visar information om B<dpkg-deb>s upphovsrätt, licensinformation och "
+"avsaknad av garanti.  (Den amerikanska stavningen B<--license> stöds också.)"
 
 # type: SH
 #: dpkg-deb.1:210
@@ -498,8 +498,8 @@ msgstr "B<--new>"
 msgid ""
 "Ensures that B<dpkg-deb> builds a `new' format archive. This is the default."
 msgstr ""
-"FÃ¶rsÃ¤krar att B<dpkg-deb> bygger ett arkiv i \"nytt\" format.  Detta Ã¤r "
-"fÃ¶rval."
+"Försäkrar att B<dpkg-deb> bygger ett arkiv i \"nytt\" format.  Detta är "
+"förval."
 
 # type: TP
 #: dpkg-deb.1:232
@@ -517,9 +517,9 @@ msgid ""
 "0.93.76 (September 1995), which was released as i386 a.out only."
 msgstr ""
 "Tvingar B<dpkg-deb> att bygga ett arkiv i \"gammalt\" format.  Det gamla "
-"arkivformatet Ã¤r mer svÃ¥rtolkat av icke-Debianverktyg och Ã¤r nu utgÃ¥nget; "
-"dess enda anvÃ¤ndningsomrÃ¥de Ã¤r fÃ¶r att bygga paket som skall tolkas av "
-"versioner av dpkg Ã¤ldre Ã¤n 0.93.76 (september 1995), vilka endast slÃ¤pptes "
+"arkivformatet är mer svårtolkat av icke-Debianverktyg och är nu utgånget; "
+"dess enda användningsområde är för att bygga paket som skall tolkas av "
+"versioner av dpkg äldre än 0.93.76 (september 1995), vilka endast släpptes "
 "som i386-a.out."
 
 # type: TP
@@ -535,9 +535,9 @@ msgid ""
 "Inhibits B<dpkg-deb --build>'s usual checks on the proposed contents of an "
 "archive. You can build any archive you want, no matter how broken, this way."
 msgstr ""
-"FÃ¶rhindrar B<dpkg-deb --build s> normala kontroller pÃ¥ det fÃ¶reslagna "
-"innehÃ¥llet i arkivet.  Du kan bygga vilket arkiv du Ã¤n vill, oavsett hur "
-"trasigt, pÃ¥ detta sÃ¤tt."
+"Förhindrar B<dpkg-deb --build s> normala kontroller på det föreslagna "
+"innehållet i arkivet.  Du kan bygga vilket arkiv du än vill, oavsett hur "
+"trasigt, på detta sätt."
 
 # type: TP
 #: dpkg-deb.1:246
@@ -549,7 +549,7 @@ msgstr "B<--debug>, B<-D>"
 #: dpkg-deb.1:249
 #, fuzzy
 msgid "Enables debugging output. This is not very interesting."
-msgstr "Aktiverar felsÃ¶kningsutdata.  Denna Ã¤r inte speciellt intressant."
+msgstr "Aktiverar felsökningsutdata.  Denna är inte speciellt intressant."
 
 # type: SH
 #: dpkg-deb.1:249
@@ -561,7 +561,7 @@ msgstr "PROGRAMFEL"
 #: dpkg-deb.1:254
 msgid ""
 "B<dpkg-deb -I> I<package1>B<.deb> I<package2>B<.deb> does the wrong thing."
-msgstr "B<dpkg-deb -I> I<paket1>B<.deb> I<paket2>B<.deb> gÃ¶r fel."
+msgstr "B<dpkg-deb -I> I<paket1>B<.deb> I<paket2>B<.deb> gör fel."
 
 # type: Plain text
 #: dpkg-deb.1:258
@@ -581,16 +581,16 @@ msgid ""
 "B<dpkg> proper to ensure that all the files are correctly placed and the "
 "package's scripts run and its status and contents recorded."
 msgstr ""
-"FÃ¶rsÃ¶k inte anvÃ¤nda bara B<dpkg-deb> fÃ¶r att installera programvara! Du "
-"mÃ¥ste anvÃ¤nda normala B<dpkg> fÃ¶r att se till att alla filer lÃ¤ggs pÃ¥ "
-"korrekt plats och att paketets skript kÃ¶rs och dess status och innehÃ¥ll "
+"Försök inte använda bara B<dpkg-deb> för att installera programvara! Du "
+"måste använda normala B<dpkg> för att se till att alla filer läggs på "
+"korrekt plats och att paketets skript körs och dess status och innehåll "
 "sparas."
 
 # type: SH
 #: dpkg-deb.1:265
 #, no-wrap
 msgid "SEE ALSO"
-msgstr "SE Ã„VEN"
+msgstr "SE ÄVEN"
 
 # type: Plain text
 #: dpkg-deb.1:270
@@ -602,7 +602,7 @@ msgstr "B<deb>(5), B<deb-control>(5), B<dpkg>(8), B<dselect>(8)."
 #: dpkg-deb.1:270
 #, no-wrap
 msgid "AUTHOR"
-msgstr "FÃ–RFATTARE"
+msgstr "FÖRFATTARE"
 
 # type: Plain text
 #: dpkg-deb.1:278
@@ -613,10 +613,10 @@ msgid ""
 "Licence; there is NO WARRANTY. See I</usr/share/doc/dpkg/copyright> and I</"
 "usr/share/common-licenses/GPL> for details."
 msgstr ""
-"B<dpkg-deb> och denna manualsida skrevs av Ian Jackson.  De Ã¤r "
-"upphovsrÃ¤ttsskyddade 1995-1996 av honom och slÃ¤ppta under GNU General Public "
+"B<dpkg-deb> och denna manualsida skrevs av Ian Jackson.  De är "
+"upphovsrättsskyddade 1995-1996 av honom och släppta under GNU General Public "
 "Licence; det finns INGEN garanti.  Se B</usr/share/doc/dpkg/copyright> och "
-"B</usr/share/common-licenses/GPL> fÃ¶r detaljer."
+"B</usr/share/common-licenses/GPL> för detaljer."
 
 # type: TH
 #~ msgid "DPKG-DEB"
