--- a/man/sv/dpkg-query.1.sv.po
+++ b/man/sv/dpkg-query.1.sv.po
@@ -1,16 +1,16 @@
-# SOME DESCRIPTIVE TITLE
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Manual page for dpkg-query(1)
+# By Peter Karlsson <peterk@debian.org>, 1999-2006.
+# Copyright 1999-2006 Software in the Public Interest
 # 
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-05-11 23:08-0500\n"
-"PO-Revision-Date: 2005-07-03 15:04+0200\n"
-"Last-Translator: Unknown translator\n"
+"PO-Revision-Date: 2006-05-14 16:18+0100\n"
+"Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 # type: Plain text
@@ -46,7 +46,7 @@ msgstr "NAMN"
 # type: Plain text
 #: dpkg-query.1:4
 msgid "dpkg-query - a tool to query the dpkg database"
-msgstr "dpkg-query - ett verktyg fÃ¶r att frÃ¥ga dpkg-databasen"
+msgstr "dpkg-query - ett verktyg för att fråga dpkg-databasen"
 
 # type: SH
 #: dpkg-query.1:5
@@ -58,13 +58,13 @@ msgstr "SYNOPS"
 #: dpkg-query.1:9
 #, fuzzy
 msgid "B<dpkg-query> B<-l>|B<--list> I<package-name-pattern> ..."
-msgstr "B<-l> | B<--list> I<paketnamnsmÃ¶nster> ..."
+msgstr "B<-l> | B<--list> I<paketnamnsmönster> ..."
 
 # type: TP
 #: dpkg-query.1:13
 #, fuzzy
 msgid "B<dpkg-query> B<-W>|B<--show> I<package-name-pattern> ..."
-msgstr "B<-W> | B<--show> I<paketnamnsmÃ¶nster> ..."
+msgstr "B<-W> | B<--show> I<paketnamnsmönster> ..."
 
 # type: TP
 #: dpkg-query.1:17
@@ -82,7 +82,7 @@ msgstr "B<-L> | B<--listfiles> I<paket> ..."
 #: dpkg-query.1:25
 #, fuzzy
 msgid "B<dpkg-query> B<-S>|B<--search> I<filename-search-pattern> ..."
-msgstr "B<-S> | B<--search> I<filnamnssÃ¶kmÃ¶nster> ..."
+msgstr "B<-S> | B<--search> I<filnamnssökmönster> ..."
 
 # type: TP
 #: dpkg-query.1:29
@@ -114,7 +114,7 @@ msgid ""
 "B<dpkg-query> is a tool to show information about packages listed in the "
 "B<dpkg> database."
 msgstr ""
-"B<dpkg-query> Ã¤r ett verktyg fÃ¶r att visa information om paket i B<dpkg>-"
+"B<dpkg-query> är ett verktyg för att visa information om paket i B<dpkg>-"
 "databasen."
 
 # type: SH
@@ -127,7 +127,7 @@ msgstr "KOMMANDON"
 #: dpkg-query.1:41
 #, no-wrap
 msgid "B<-l> | B<--list> I<package-name-pattern> ..."
-msgstr "B<-l> | B<--list> I<paketnamnsmÃ¶nster> ..."
+msgstr "B<-l> | B<--list> I<paketnamnsmönster> ..."
 
 # type: Plain text
 #: dpkg-query.1:50
@@ -140,12 +140,12 @@ msgid ""
 "pattern> to prevent the shell from performing filename expansion. For "
 "example this will list all package names starting with ``libc6'':"
 msgstr ""
-"Lista paket som matchar det givna mÃ¶nstret.  Om inget I<paketnamnsmÃ¶nster> "
+"Lista paket som matchar det givna mönstret.  Om inget I<paketnamnsmönster> "
 "anges listas alla paket i I</var/lib/dpkg/status>.  Skalets normala "
-"jokertecken tillÃ¥ts i I<paketnamnsmÃ¶nster>.  Observera att du sannolikt "
-"mÃ¥ste skriva I<paketnamnsmÃ¶nster> inom citationstecken fÃ¶r att fÃ¶rhindra att "
-"skalet expanderar filnamnet.  Till exempel kommer fÃ¶ljande lista alla paket "
-"vars namn bÃ¶rjar pÃ¥ \"libc5\":"
+"jokertecken tillåts i I<paketnamnsmönster>.  Observera att du sannolikt "
+"måste skriva I<paketnamnsmönster> inom citationstecken för att förhindra att "
+"skalet expanderar filnamnet.  Till exempel kommer följande lista alla paket "
+"vars namn börjar på \"libc5\":"
 
 # type: Plain text
 #: dpkg-query.1:54
@@ -166,7 +166,7 @@ msgstr ""
 #: dpkg-query.1:60
 #, no-wrap
 msgid "B<-W> | B<--show> I<package-name-pattern> ..."
-msgstr "B<-W> | B<--show> I<paketnamnsmÃ¶nster> ..."
+msgstr "B<-W> | B<--show> I<paketnamnsmönster> ..."
 
 # type: Plain text
 #: dpkg-query.1:67
@@ -179,7 +179,7 @@ msgid ""
 "separated by a tab."
 msgstr ""
 "Precis som flaggan B<--list> kommer detta att visa alla paket som matchar "
-"det givna mÃ¶nstret.  Utdatat kan dock skrÃ¤ddarsys med flaggan B<--"
+"det givna mönstret.  Utdatat kan dock skräddarsys med flaggan B<--"
 "showformat>."
 
 # type: TP
@@ -195,7 +195,7 @@ msgid ""
 "installed package status database."
 msgstr ""
 "Rapportera status om det angivna paketet.  Detta alternativ visar helt "
-"enkelt posten i statusdatabasen fÃ¶r installerade paket."
+"enkelt posten i statusdatabasen för installerade paket."
 
 # type: TP
 #: dpkg-query.1:71
@@ -210,14 +210,14 @@ msgid ""
 "List files installed to your system from B<package-name>.  However, note "
 "that files created by package-specific installation-scripts are not listed."
 msgstr ""
-"Listar filer som installerats pÃ¥ ditt system frÃ¥n B<paket>.  Observera dock "
+"Listar filer som installerats på ditt system från B<paket>.  Observera dock "
 "att filer som skapats av paketspecifika installationsskript inte listas."
 
 # type: TP
 #: dpkg-query.1:76
 #, no-wrap
 msgid "B<-S> | B<--search> I<filename-search-pattern> ..."
-msgstr "B<-S> | B<--search> I<filnamnssÃ¶kmÃ¶nster> ..."
+msgstr "B<-S> | B<--search> I<filnamnssökmönster> ..."
 
 # type: Plain text
 #: dpkg-query.1:82
@@ -227,8 +227,8 @@ msgid ""
 "can be used in the pattern. This command will not list extra files created "
 "by maintainer scripts, nor will it list alternatives."
 msgstr ""
-"SÃ¶k efter filnamnet bland de installerade paketen.  Alla skalets vanliga "
-"jokertecken kan anvÃ¤ndas i mÃ¶nstret.  Kommandot kommer inte att visa "
+"Sök efter filnamnet bland de installerade paketen.  Alla skalets vanliga "
+"jokertecken kan användas i mönstret.  Kommandot kommer inte att visa "
 "extrafiler som skapas av paketskript, ej heller kommer det att visa "
 "alternativ."
 
@@ -244,7 +244,7 @@ msgstr "B<-p> |B<--print-avail> paket"
 msgid ""
 "Display details about I<package-name>, as found in I</var/lib/dpkg/"
 "available>."
-msgstr "Visar detaljer om I<paket> frÃ¥n I</var/lib/dpkg/available>."
+msgstr "Visar detaljer om I<paket> från I</var/lib/dpkg/available>."
 
 # type: TP
 #: dpkg-query.1:86
@@ -255,7 +255,7 @@ msgstr "B<--licence> | B<--license>"
 # type: Plain text
 #: dpkg-query.1:89
 msgid "Display licence and copyright information."
-msgstr "Visar licensvillkor och upphovsrÃ¤ttsinformation."
+msgstr "Visar licensvillkor och upphovsrättsinformation."
 
 # type: TP
 #: dpkg-query.1:89
@@ -286,7 +286,7 @@ msgstr "B<--admindir=>I<kat>"
 msgid ""
 "Change the location of the B<dpkg> database. The default location is I</var/"
 "lib/dpkg>."
-msgstr "Ã„ndra platsen fÃ¶r B<dpkg>-databasen.  FÃ¶rval Ã¤r I</var/lib/dpkg>."
+msgstr "Ändra platsen för B<dpkg>-databasen.  Förval är I</var/lib/dpkg>."
 
 # type: TP
 #: dpkg-query.1:98
@@ -383,7 +383,7 @@ msgstr ""
 #: dpkg-query.1:164
 #, no-wrap
 msgid "ENVIRONMENT"
-msgstr "MILJÃ–VARIABLER"
+msgstr "MILJÖVARIABLER"
 
 # type: TP
 #: dpkg-query.1:165
@@ -397,19 +397,19 @@ msgid ""
 "This setting influences the output of the B<--list> option by changing the "
 "width of its output."
 msgstr ""
-"Denna instÃ¤llningar pÃ¥verkar utdata frÃ¥n kommandot B<--list> genom att Ã¤ndra "
-"bredden pÃ¥ dess utdata."
+"Denna inställningar påverkar utdata från kommandot B<--list> genom att ändra "
+"bredden på dess utdata."
 
 # type: SH
 #: dpkg-query.1:170
 #, no-wrap
 msgid "AUTHOR"
-msgstr "FÃ–RFATTARE"
+msgstr "FÖRFATTARE"
 
 # type: Plain text
 #: dpkg-query.1:172
 msgid "Copyright 2001 Wichert Akkerman"
-msgstr "UpphovsrÃ¤ttsskyddat 2001 Wichert Akkerman"
+msgstr "Upphovsrättsskyddat 2001 Wichert Akkerman"
 
 # type: UR
 #: dpkg-query.1:172
@@ -429,14 +429,14 @@ msgid ""
 "This is free software; see the GNU General Public Licence version 2 or later "
 "for copying conditions. There is NO warranty."
 msgstr ""
-"Detta Ã¤r fri programvara; se GNU General Public License version 2 eller "
-"senare fÃ¶r kopieringsvillkor. Det finns INGEN garanti."
+"Detta är fri programvara; se GNU General Public License version 2 eller "
+"senare för kopieringsvillkor. Det finns INGEN garanti."
 
 # type: SH
 #: dpkg-query.1:179
 #, no-wrap
 msgid "SEE ALSO"
-msgstr "SE Ã„VEN"
+msgstr "SE ÄVEN"
 
 # type: Plain text
 #: dpkg-query.1:181
@@ -463,11 +463,11 @@ msgstr "B<dpkg>(8)"
 #~ "${var[;width]} syntax. Fields are printed be right-aligned unless the "
 #~ "width is negative in which case left alignment will be used."
 #~ msgstr ""
-#~ "Denna flagga anvÃ¤nds fÃ¶r att ange formatet pÃ¥ det utdata B<--show> "
-#~ "skapar.  Formatet Ã¤r en strÃ¤ng som kommer att ange utdata fÃ¶r varje paket "
-#~ "som listas.  FormatstrÃ¤ngen kan innehÃ¥lla de vanliga teckensekvenserna "
-#~ "\\en (nyrad), \\er (vagnretur) eller \\e\\e (rent omvÃ¤nt snedstreck).  "
-#~ "Paketinformation kan inkluderas genom att lÃ¤gga in variabelreferenser "
-#~ "till paketfÃ¤lt genom att anvÃ¤nda syntaxen ${var[;bredd]}.  FÃ¤lten som "
-#~ "skrivs ut kommer att hÃ¶gerjusteras sÃ¥vida inte bredden Ã¤r negativ, i "
-#~ "vilket fall vÃ¤nsterjustering kommer att anvÃ¤ndas."
+#~ "Denna flagga används för att ange formatet på det utdata B<--show> "
+#~ "skapar.  Formatet är en sträng som kommer att ange utdata för varje paket "
+#~ "som listas.  Formatsträngen kan innehålla de vanliga teckensekvenserna "
+#~ "\\en (nyrad), \\er (vagnretur) eller \\e\\e (rent omvänt snedstreck).  "
+#~ "Paketinformation kan inkluderas genom att lägga in variabelreferenser "
+#~ "till paketfält genom att använda syntaxen ${var[;bredd]}.  Fälten som "
+#~ "skrivs ut kommer att högerjusteras såvida inte bredden är negativ, i "
+#~ "vilket fall vänsterjustering kommer att användas."
