--- a/man/sv/dpkg.cfg.5.sv.po
+++ b/man/sv/dpkg.cfg.5.sv.po
@@ -1,16 +1,16 @@
-# SOME DESCRIPTIVE TITLE
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Manual page for dpkg.cfg(5)
+# By Peter Karlsson <peterk@debian.org>, 1999-2006.
+# Copyright 1999-2006 Software in the Public Interest
 # 
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-02-28  1:40+0200\n"
-"PO-Revision-Date: 2005-07-03 15:04+0200\n"
-"Last-Translator: Unknown translator\n"
+"PO-Revision-Date: 2006-05-14 16:18+0100\n"
+"Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 # type: TH
@@ -46,7 +46,7 @@ msgstr "NAMN"
 # type: Plain text
 #: dpkg.cfg.5:4
 msgid "dpkg.cfg - dpkg configuration file"
-msgstr "dpkg.cfg - instÃ¤llningsfil fÃ¶r dpkg"
+msgstr "dpkg.cfg - inställningsfil för dpkg"
 
 # type: SH
 #: dpkg.cfg.5:5
@@ -63,10 +63,10 @@ msgid ""
 "except for the leading dashes which are not used here. Comments are allowed "
 "by starting a line with a hash sign (\"B<#>\")."
 msgstr ""
-"Denna fil innehÃ¥ller fÃ¶rvalda instÃ¤llningar fÃ¶r dpkg.  Varje rad bestÃ¥r av "
-"en ensam flagga som Ã¤r exakt densamma som en normal kommandoradsflagga fÃ¶r "
-"dpkg, fÃ¶rutom de inledande bindestrecken vilka inte anvÃ¤nds hÃ¤r.  "
-"Kommentarer Ã¤r tillÃ¥tna genom att inleda en rad med nummertecken (\"B<#>\")."
+"Denna fil innehåller förvalda inställningar för dpkg.  Varje rad består av "
+"en ensam flagga som är exakt densamma som en normal kommandoradsflagga för "
+"dpkg, förutom de inledande bindestrecken vilka inte används här.  "
+"Kommentarer är tillåtna genom att inleda en rad med nummertecken (\"B<#>\")."
 
 # type: SH
 #: dpkg.cfg.5:12
@@ -89,7 +89,7 @@ msgstr ""
 #: dpkg.cfg.5:17
 #, no-wrap
 msgid "AUTHOR"
-msgstr "FÃ–RFATTARE"
+msgstr "FÖRFATTARE"
 
 # type: Plain text
 #: dpkg.cfg.5:20
@@ -98,14 +98,14 @@ msgid ""
 "See I</usr/share/doc/dpkg/THANKS> for the list of people who have "
 "contributed to B<dpkg>."
 msgstr ""
-"Se B</usr/share/doc/dpkg/THANKS> fÃ¶r listan Ã¶ver personer som har bidragit "
+"Se B</usr/share/doc/dpkg/THANKS> för listan över personer som har bidragit "
 "till B<dpkg> ."
 
 # type: SH
 #: dpkg.cfg.5:21
 #, no-wrap
 msgid "SEE ALSO"
-msgstr "SE Ã„VEN"
+msgstr "SE ÄVEN"
 
 # type: Plain text
 #: dpkg.cfg.5:22
