Try harder to detect dependency cycles that contain Provides links. Closes: #349120, #349442

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-15  Frank Lichtenheld  <djpig@debian.org>
+
+	* src/depcon.c (findbreakcyclerecursive): Try
+	to find cycles also by moving up Provides links.
+
 2006-05-15  Ian Jackson  <iwj@ubuntu.com>
 
 	* debian/control (dpkg[Depends]): Move
