minor improvements in dpkg translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,10 @@
+2006-05-15  Eddy Petrişor  <eddy.petrisor@gmail.com>
+
+	* ro.po: Fixed some consitency issues;
+	"conffiles" is no longer translated;
+	doublechecked for existance of writings without diacritics;
+	translation still at 742t.
+
 2006-05-15  Peter Karlsson  <peterk@debian.org>
 
 	* sv.po: Updated to 742t.
